# katas

./: .flake8  .gitignore  .projections.json  .pylintrc  .testmondata  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.vim/: coc-settings.json
bank/: README.md  account_service.py  bank.py  bank_test.py  main.py
calculating-with-functions/: README.md  calculating_with_functions.py  calculating_with_functions_test.py  main.py  main_test.py  mypy.ini
calculating_with_functions/: README.md  calculating_with_functions.py  calculating_with_functions_test.py
coffee-machine/: README.md  coffee_machine.py  coffee_machine_test.py
coffee_machine/: README.md  coffee_machine.py  main.py
corporate_hotel_booking/: README.md
employee-report/: README.md  employee_report.py  employee_report_test.py
fizzbuzz/: README.md  fizzbuzz.py  fizzbuzz_test.py  main.py  solution_test.py  test_fizzbuzz.py
fizzbuzz_bdd/: README.md
game-of-life/: README.md
game_of_life/: README.md  game_of_live.py
gilded-rose/: Makefile  README.md  mypy.ini  pyproject.toml  requirements.md  test_gilded_rose.py
gilded-rose/app/: gilded_rose.py
gilded-rose/app/domain/: aged_brie.py  aged_brie_item.py  backstage_item.py  base_item.py  item.py  item_factory.py  regular_item.py  sulfuras_item.py
gilded-rose/fixtures/: texttest_fixture.py
gilded-rose/tests/: TestGildedRose.test_update_quality.approved.txt  test_gilded_rose.py  texttest_fixture.py
guess_random_number/: README.md  generator.py  guess.py  test_guess.py
lear-year/: README.md  leap_year.py  leap_year_test.py
nomina/: EXAMPLE.md  README.md  employee.py  nomina.py  nomina_test.py  tcr.sh  watch.sh
ohce/: README.md  main.py
permutations/: README.md  main.py  main_test.py  permutations.py  permutations_test.py  requirements.txt
potter/: README.md  main.py  main_test.py  potter.py  potter_test.py
print_date/: README.md
range-extraction/: README.md  main.py  main_test.py  range_extraction.py  range_extraction_test.py
roman-numerals/: README.md  roman_numerals.py  roman_numerals_test.py
simple-mars-rover/: README.md  mars_rover.py  mars_rover_test.py
snail/: README.md  main.py  main_test.py  snail.py  snail_test.py
string-calculator/: README.md  string_calculator.py  string_calculator_test.py
sum-of-pairs/: README.md  main.py  main_test.py  sum_of_pairs.py  sum_of_pairs_test.py
text-processing/: README.md  text_processing.py  text_processing_test.py
theatrical_players/: README.md  amount.py  credit.py  play.py  report.py  statement.py
tiered_pricing/: GRADUATED_TIERED_PRICING.md  README.md  TIERED_PRICING.md  requirements.txt
user-registration-refactoring/: .gitignore  Dockerfile  Makefile  README.md  manage.py
(+106 files in other folders)
