[tool.poetry]
name = "katas"
version = "0.1.0"
description = ""
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
approvaltests = "^5.6.1"

[tool.poetry.dev-dependencies]
doublex = "^1.9.3"
doublex-expects = "^0.7.1"
expects = "^0.9.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
