[tool.poetry]
name = "katas"
version = "0.1.0"
description = ""
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
doublex = "^1.9.3"
doublex-expects = "^0.7.1"
expects = "^0.9.0"
pytest = "^7.1.3"
approvaltests = "^5.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
