[tool.poetry]
name = "katas"
version = "0.1.0"
description = ""
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flake8-pyproject = "^1.1.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
mypy = "^0.971"
flake8 = "^5.0.4"
doublex = { git = "https://github.com/davidvilla/python-doublex", rev = "0ccbe65c8574169d8b723c1ef29bcbe3f2e98c20" }
doublex-expects = "^0.7.1"
expects = "^0.9.0"
mamba = "^0.11.2"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
pytest-watch = "^4.2.0"
pytest-testmon = "^1.3"
pytest-bdd = "^6.0.1"
approvaltests = "^5.6.1"

[tool.flake8]
ignore= ["E501", "E124","E203", "W291", "W503", "W504"]
[tool.yapf]
based_on_style = "google"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
