[tool.poetry]
name = "gilded-rose"
version = "0.1.0"
description = ""
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
expects = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
