[tool.poetry]
name = "gilded-rose"
version = "0.1.0"
description = ""
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"

[tool.poetry.dev-dependencies]
expects = "^0.9.0"
pytest = "^7.1.2"
approvaltests = "^5.4.0"
black = "^22.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 200
target-version = ['py38']